Accounts MS - Made it a configserver client and added rabbitmq connection
