# accounts/src/main/java/com/omarabdelrehim8/accounts/controller/AccountController.java
@@ -1,10 +1,7 @@
 package com.omarabdelrehim8.accounts.controller;
 
 import com.fasterxml.jackson.annotation.JsonView;
-import com.omarabdelrehim8.accounts.dto.AccountDto;
-import com.omarabdelrehim8.accounts.dto.CustomerDto;
-import com.omarabdelrehim8.accounts.dto.ErrorResponseDto;
-import com.omarabdelrehim8.accounts.dto.ResponseDto;
+import com.omarabdelrehim8.accounts.dto.*;
 import com.omarabdelrehim8.accounts.dto.constraints.CustomerValidation;
 import com.omarabdelrehim8.accounts.dto.constraints.CustomerView;
 import com.omarabdelrehim8.accounts.service.AccountService;
@@ -12,6 +9,9 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.Pattern;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.env.Environment;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
@@ -30,6 +30,15 @@ import static com.omarabdelrehim8.accounts.constants.AccountConstants.*;
 public class AccountController {
 
     private final AccountService accountService;
+
+    @Value("${build.version}")
+    private String buildVersion;
+
+    @Autowired
+    private Environment environment;
+
+    @Autowired
+    private AccountsContactInfoDto accountsContactInfoDto;
 
     @PostMapping("/create")
     public ResponseEntity<ResponseDto> createAccountForNewCustomer (@Validated(CustomerValidation.OnCreate.class)
@@ -124,4 +133,26 @@ public class AccountController {
                                                LocalDateTime.now()));
         }
     }
+
+    @GetMapping("/build-version")
+    public ResponseEntity<String> getBuildVersion() {
+        return ResponseEntity
+                .status(HttpStatus.OK)
+                .body(buildVersion);
+    }
+
+    @GetMapping("/java-version")
+    public ResponseEntity<String> getJavaVersion() {
+        return ResponseEntity
+                .status(HttpStatus.OK)
+                .body(environment.getProperty("JAVA_HOME"));
+    }
+
+    @GetMapping("/contact-info")
+    public ResponseEntity<AccountsContactInfoDto> getContactInfo() {
+        return ResponseEntity
+                .status(HttpStatus.OK)
+                .body(accountsContactInfoDto);
+    }
+
 }
